--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.09MB/s(Youtube:不良林), server: 167.88.61.50, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇦 加拿大-2.19MB/s(Youtube:不良林), server: 198.57.27.225, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-2.75MB/s(Youtube:不良林), server: 198.57.27.225, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇦 加拿大-2.59MB/s(Youtube:不良林), server: 198.57.27.225, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-2.85MB/s(Youtube:不良林), server: 167.88.61.50, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-3.55MB/s(Youtube:不良林), server: rn.uuuuuu.eu, port: 443, type: trojan, password: !<str> 888888, sni: rn.uuuuuu.eu, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林), server: 185.167.116.252, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
-  - {name: 🇦🇺 澳大利亚-1.53MB/s(Youtube:不良林), server: 185.167.116.252, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
-  - {name: 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林), server: 185.167.116.252, port: 9097, type: ss, cipher: aes-256-cfb, password: Sn5B7jTqr76aCJT8}
-  - {name: 🇦🇺 澳大利亚-778.7KB/s(Youtube:不良林), server: 185.167.116.252, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 波兰-2.18MB/s(Youtube:不良林), server: 217.30.10.63, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
+  - {name: 🇨🇦 加拿大-911.0KB/s(Youtube:不良林), server: 198.57.27.225, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇺🇸 美国-1.29MB/s(Youtube:不良林), server: 167.88.61.2, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-512.7KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20735, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.99MB/s(Youtube:不良林), server: 167.88.61.50, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 波兰-1.32MB/s(Youtube:不良林), server: 217.30.10.63, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
+  - {name: 🇸🇬 新加坡-2.20MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-967.9KB/s(Youtube:不良林), server: 167.88.61.2, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-635.8KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20734, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.00MB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20746, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.53MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-778.7KB/s(Youtube:不良林)
+      - 波兰-2.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-911.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-512.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 波兰-1.32MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-967.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-635.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.53MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-778.7KB/s(Youtube:不良林)
+      - 波兰-2.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-911.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-512.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 波兰-1.32MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-967.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-635.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.53MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-778.7KB/s(Youtube:不良林)
+      - 波兰-2.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-911.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-512.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 波兰-1.32MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-967.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-635.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.53MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-778.7KB/s(Youtube:不良林)
+      - 波兰-2.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-911.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-512.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 波兰-1.32MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-967.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-635.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.53MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-778.7KB/s(Youtube:不良林)
+      - 波兰-2.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-911.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-512.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 波兰-1.32MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-967.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-635.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.53MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-778.7KB/s(Youtube:不良林)
+      - 波兰-2.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-911.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-512.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 波兰-1.32MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-967.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-635.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.53MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-778.7KB/s(Youtube:不良林)
+      - 波兰-2.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-911.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-512.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 波兰-1.32MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-967.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-635.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
