--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.94MB/s(Youtube:不良林), server: 167.88.61.2, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 波兰-1.38MB/s(Youtube:不良林), server: 217.30.10.63, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 🇺🇸 美国-2.62MB/s(Youtube:不良林), server: 167.88.61.50, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇳🇱 荷兰-1.64MB/s(Youtube:不良林), server: 213.183.59.214, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
-  - {name: 波兰-242.7KB/s(Youtube:不良林), server: 217.30.10.63, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
+  - {name: 🇺🇸 美国-316.7KB/s(Youtube:不良林), server: 167.88.61.2, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇦🇺 澳大利亚-1.15MB/s(Youtube:不良林), server: 185.167.116.252, port: 9097, type: ss, cipher: aes-256-cfb, password: Sn5B7jTqr76aCJT8}
+  - {name: 🇺🇸 美国-2.86MB/s(Youtube:不良林), server: 167.88.61.50, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 波兰-2.18MB/s(Youtube:不良林), server: 217.30.10.63, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
+  - {name: 🇨🇦 加拿大-1.34MB/s(Youtube:不良林), server: 198.57.27.225, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
   - {name: 波兰-1.32MB/s(Youtube:不良林), server: 217.30.10.63, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
   - {name: 🇸🇬 新加坡-2.20MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
   - {name: 🇺🇸 美国-967.9KB/s(Youtube:不良林), server: 167.88.61.2, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 波兰-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
-      - 波兰-242.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-316.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
+      - 波兰-2.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
       - 波兰-1.32MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-967.9KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 波兰-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
-      - 波兰-242.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-316.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
+      - 波兰-2.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
       - 波兰-1.32MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-967.9KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 波兰-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
-      - 波兰-242.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-316.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
+      - 波兰-2.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
       - 波兰-1.32MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-967.9KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 波兰-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
-      - 波兰-242.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-316.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
+      - 波兰-2.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
       - 波兰-1.32MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-967.9KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 波兰-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
-      - 波兰-242.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-316.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
+      - 波兰-2.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
       - 波兰-1.32MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-967.9KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 波兰-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
-      - 波兰-242.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-316.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
+      - 波兰-2.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
       - 波兰-1.32MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-967.9KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 波兰-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
-      - 波兰-242.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-316.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
+      - 波兰-2.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
       - 波兰-1.32MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-967.9KB/s(Youtube:不良林)
