--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 波兰-214.5KB/s(Youtube:不良林), server: 217.30.10.63, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
-  - {name: 🇺🇸 美国-1.09MB/s(Youtube:不良林), server: 167.88.61.2, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-1.48MB/s(Youtube:不良林), server: 167.88.61.50, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇳🇱 荷兰-943.3KB/s(Youtube:不良林), server: 213.183.59.214, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
-  - {name: 🇦🇺 澳大利亚-1.15MB/s(Youtube:不良林), server: 185.167.116.252, port: 9097, type: ss, cipher: aes-256-cfb, password: Sn5B7jTqr76aCJT8}
-  - {name: 波兰-157.5KB/s(Youtube:不良林), server: 217.30.10.63, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
-  - {name: 波兰-1.19MB/s(Youtube:不良林), server: 217.30.10.63, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
+  - {name: 🇨🇦 加拿大-964.1KB/s(Youtube:不良林), server: 198.57.27.225, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇦 加拿大-1.86MB/s(Youtube:不良林), server: 198.57.27.225, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 波兰-1.31MB/s(Youtube:不良林), server: 217.30.10.63, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
+  - {name: 🇺🇸 美国-2.35MB/s(Youtube:不良林), server: 167.88.61.50, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇳 中国-427.1KB/s(Youtube:不良林), server: 120.241.236.93, port: 34955, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
+  - {name: 波兰-825.1KB/s(Youtube:不良林), server: 217.30.10.63, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
+  - {name: 波兰-397.2KB/s(Youtube:不良林), server: 217.30.10.63, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
+  - {name: 波兰-742.6KB/s(Youtube:不良林), server: 217.30.10.63, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
   - {name: 波兰-153.8KB/s(Youtube:不良林), server: 217.30.10.63, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
   - {name: 波兰-218.7KB/s(Youtube:不良林), server: 217.30.10.63, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
-  - {name: 🇺🇸 美国-1.00MB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20746, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-214.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-943.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.15MB/s(Youtube:不良林)
-      - 波兰-157.5KB/s(Youtube:不良林)
-      - 波兰-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-964.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
+      - 波兰-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
+      - 波兰-825.1KB/s(Youtube:不良林)
+      - 波兰-397.2KB/s(Youtube:不良林)
+      - 波兰-742.6KB/s(Youtube:不良林)
       - 波兰-153.8KB/s(Youtube:不良林)
       - 波兰-218.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 波兰-214.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-943.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.15MB/s(Youtube:不良林)
-      - 波兰-157.5KB/s(Youtube:不良林)
-      - 波兰-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-964.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
+      - 波兰-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
+      - 波兰-825.1KB/s(Youtube:不良林)
+      - 波兰-397.2KB/s(Youtube:不良林)
+      - 波兰-742.6KB/s(Youtube:不良林)
       - 波兰-153.8KB/s(Youtube:不良林)
       - 波兰-218.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-214.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-943.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.15MB/s(Youtube:不良林)
-      - 波兰-157.5KB/s(Youtube:不良林)
-      - 波兰-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-964.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
+      - 波兰-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
+      - 波兰-825.1KB/s(Youtube:不良林)
+      - 波兰-397.2KB/s(Youtube:不良林)
+      - 波兰-742.6KB/s(Youtube:不良林)
       - 波兰-153.8KB/s(Youtube:不良林)
       - 波兰-218.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 波兰-214.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-943.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.15MB/s(Youtube:不良林)
-      - 波兰-157.5KB/s(Youtube:不良林)
-      - 波兰-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-964.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
+      - 波兰-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
+      - 波兰-825.1KB/s(Youtube:不良林)
+      - 波兰-397.2KB/s(Youtube:不良林)
+      - 波兰-742.6KB/s(Youtube:不良林)
       - 波兰-153.8KB/s(Youtube:不良林)
       - 波兰-218.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 波兰-214.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-943.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.15MB/s(Youtube:不良林)
-      - 波兰-157.5KB/s(Youtube:不良林)
-      - 波兰-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-964.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
+      - 波兰-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
+      - 波兰-825.1KB/s(Youtube:不良林)
+      - 波兰-397.2KB/s(Youtube:不良林)
+      - 波兰-742.6KB/s(Youtube:不良林)
       - 波兰-153.8KB/s(Youtube:不良林)
       - 波兰-218.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-214.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-943.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.15MB/s(Youtube:不良林)
-      - 波兰-157.5KB/s(Youtube:不良林)
-      - 波兰-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-964.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
+      - 波兰-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
+      - 波兰-825.1KB/s(Youtube:不良林)
+      - 波兰-397.2KB/s(Youtube:不良林)
+      - 波兰-742.6KB/s(Youtube:不良林)
       - 波兰-153.8KB/s(Youtube:不良林)
       - 波兰-218.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-214.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-943.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.15MB/s(Youtube:不良林)
-      - 波兰-157.5KB/s(Youtube:不良林)
-      - 波兰-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-964.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
+      - 波兰-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
+      - 波兰-825.1KB/s(Youtube:不良林)
+      - 波兰-397.2KB/s(Youtube:不良林)
+      - 波兰-742.6KB/s(Youtube:不良林)
       - 波兰-153.8KB/s(Youtube:不良林)
       - 波兰-218.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
